--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,19 +41,19 @@ jobs:
 
       - name: Generate a changelog
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        run: git cliff --current --strip header -o ${{ env.CHANGELOG_FILE }}
+        run: git cliff --unreleased --strip header
 
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        with:
-          body_path: ${{ env.CHANGELOG_FILE }}
-          files: |
-            ${{ env.STAGING_DIR }}/${{ env.ARCHIVE_NAME }}
-            ./target/release/redscript-cli.exe
-          prerelease: ${{ contains(github.ref_name, '-RC') || contains(github.ref_name, '-M') }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Release
+      #   uses: softprops/action-gh-release@v1
+      #   if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+      #   with:
+      #     body_path: ${{ env.CHANGELOG_FILE }}
+      #     files: |
+      #       ${{ env.STAGING_DIR }}/${{ env.ARCHIVE_NAME }}
+      #       ./target/release/redscript-cli.exe
+      #     prerelease: ${{ contains(github.ref_name, '-RC') || contains(github.ref_name, '-M') }}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Archive artifacts
         uses: actions/upload-artifact@v3
